--- a/koji/src/app/user-page/body/event-setting/event-setting.component.html
+++ b/koji/src/app/user-page/body/event-setting/event-setting.component.html
@@ -5,9 +5,116 @@
                 <button class="btn btn-back-container btn-dark text-white rounded-pill h6" (click)="back()">
                     <
                 </button>
+                <p class="text-center h2">تنظیمات قرار</p>
             </div>
             <div class="body">
+                <div class="navigate-panel">
+                    <div 
+                        class="navigate-item"
+                        [ngClass]="{'selected':selectedItem=='update'}"
+                        (click)="selectedItem='update'"
+                    >
+                        بروز رسانی قرار
+                    </div>
+                    <div
+                        class="navigate-item"
+                        [ngClass]="{'selected':selectedItem=='end'}"
+                        (click)="selectedItem='end'"
+                    >
+                        اتمام رای گیری 
+                    </div>
+                    <div
+                        class="navigate-item"
+                        [ngClass]="{'selected':selectedItem=='delete'}"
+                        (click)="selectedItem='delete'"    
+                    >
+                       حذف قرار
+                    </div>
+                    <div class="update" *ngIf="selectedItem=='update'">
+                        <form class="mt-4 mb-4" [formGroup]="createEventForm">
+                            <div>
+                                <label for="place" class="h5">میتوانید عنوان قرار را تغییر دهید</label><br>
+                                <input class="text-center" type="text" placeholder="عنوان قرار" name="eventTitle" id="eventTitle" [formControl]="eventTitle">  
+                                <span [hidden]="eventTitle.valid || eventTitle.untouched" class="error" dir="rtl">
+                                    <div [hidden]="!eventTitle.hasError('required')">  
+                                        این فیلد ضروری است.
+                                    </div>
+                                    <div [hidden]="!eventTitle.hasError('maxlength')">  
+                                        توضیحات نمیتواند بیشتر از چهل حرف باشد.
+                                    </div>
+                                    <br>
+                                </span>
+                            </div>
 
+                            <div class="m-4" style="position: relative; width: 100%; border-bottom: 2px solid black;"></div>
+                            <div class="mt-3" dir="rtl">
+                                <label for="place" class="h5">مکان های مورد نظر برای قرار را مشخص کنید</label><br>
+                                <input 
+                                    style="width: 68%; height: 40px;" 
+                                    type="text" placeholder="نام مکان" 
+                                    name="place" id="place"
+                                    [formControl]="placeInput"                            
+                                    >
+                                <button class="btn btn-danger m-3" (click)="addPlace()">افزودن</button>
+                                <br><br>
+                            </div>
+                            <div class="places-container pb-3" dir="rtl" style="position: relative; width: 100%; border-bottom: 2px solid black;">
+                                <div class="place-item bg-success" *ngFor="let place of createEventData.eventPlaces;let i=index">
+                                    <button class="btn btn-danger mr-3" (click)="deletePlace(i)">x</button>
+                                    <span class="p-3 text-white">{{place}}</span>
+                                </div>
+                            </div>
+            
+                            <div class="mt-5" dir="rtl">
+                                <label for="date" class="h5">تاریخ های مورد نظر برای قرار را مشخص کنید</label><br>
+                                <input 
+                                    style="width: 68%; height: 40px;" 
+                                    type="text" 
+                                    name="date" id="date"
+                                    [formControl]="dateInput"
+                                    placeholder="تاریخ و زمان">
+                                <button for="date" class="btn btn-danger m-3" (click)="addDate()">افزودن</button>
+                                <br><br>
+                            </div>
+                            <div class="dates-container pb-3" dir="rtl" style="position: relative; width: 100%; border-bottom: 2px solid black;">
+                                <div class="dates-item bg-success" *ngFor="let date of createEventData.eventDates;let i=index">
+                                    <button class="btn btn-danger mr-3" (click)="deleteDate(i)">x</button>
+                                    <span class="p-3 text-white">{{date}}</span>
+                                </div>
+                            </div>
+                            <button dir="rtl" (click)="update()" [disabled]="!createEventForm.valid" class="submit btn-form btn-success mb-3 mt-4">اعمال تغییرات</button>  
+                            <div class="request_status" dir="rtl">
+                                <div *ngIf="isLoading">لطفا منتظر بمانید ...</div>
+                                <div class="text-success" *ngIf="createSuccess">تغییرات با موفقیت اعمال شد.</div>
+                                <div class="text-danger" *ngIf="createError">مشکلی در اعمال تغییرات پیش آمده است.</div>
+                            </div>
+                        </form>
+                    </div>
+                    <div *ngIf="selectedItem=='end'" class="end">
+                        <div class="m-4 text-center" >
+                            <div dir="rtl" *ngIf="!userPageInformation.selectedEvent!.finalDate && !userPageInformation.selectedEvent!.finalPlace">
+                                <h1>شرایط نهایی درحال حاضر:</h1>
+                                زمان: <span>{{finalDate}}</span> 
+                                مکان: <span>{{finalPlace}}</span>
+                                <label for="place" class="h5">توضیحات نهایی را بنویسید (اختیاری)</label><br><br>
+                                <textarea
+                                        style="width: 50%;" 
+                                        class="text-center"
+                                        type="text" 
+                                        placeholder="توضیحات قرار" 
+                                        name="eventDescriptions" 
+                                        id="eventDescriptions" 
+                                        [formControl]="eventDescriptions"
+                                    >
+                                </textarea><br>
+                                <button class="submit btn-form btn-success mb-3 mt-4" (click)="end()">اتمام رای گیری</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div *ngIf="selectedItem=='delete'" class="delete">
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>    
