--- a/koji/src/app/user-page/body/event/event.component.scss
+++ b/koji/src/app/user-page/body/event/event.component.scss
@@ -97,7 +97,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
+    min-width: 50px;
     height: 50px;
     border-radius: 50px;
     position: relative;
