--- a/koji/src/app/user-page/body/join-group/join-group.component.html
+++ b/koji/src/app/user-page/body/join-group/join-group.component.html
@@ -10,23 +10,35 @@
                 </button>
             </div>
             <div class="body" dir="rtl">
-                <div class="result-container row mb-5" dir="rtl">
-                    <div *ngIf="reqStatus=='loading'" class="col-xs-12">
-                        در حال جستجو . . .
+                <div class="result-container row mb-5" *ngIf="searchSuccess" dir="rtl">
+
+                    <div mat-button [matMenuTriggerFor]="menu" class="result col-xs-12">
+                        <p class="text-center pt-3">نام گروه: {{groupData.name}} </p>
+                        <br><br>
+                        <p class="text-center">اعضا: {{userProfiles.length}} </p>
                     </div>
-                    <div *ngIf="reqStatus=='error'" class="col-xs-12">
-                        خطایی رخ داده است.
-                    </div>
-                    <div class="result col-xs-12" *ngIf="reqStatus=='success'">
-                        نام گروه: {{1}}
-                    </div>
-                    <button class="btn btn-success join-btn m-3 col-xs-12" style="width: 100%;" (click)="join()">
+                    <mat-menu #menu="matMenu">
+                        <div mat-menu-item *ngFor="let user of userProfiles">{{user.firstName}} {{user.lastName}}</div>
+                    </mat-menu>
+                    <button class="btn btn-success join-btn m-3 col-xs-12 rounded-pill" style="width: 100%;" (click)="join()">
                         عضو شدن
                     </button>
+                    
+                    <br>
+                    <div class=" text-center" dir="rtl">
+                        <div *ngIf="isJoining">لطفا منتظر بمانید ...</div>
+                        <div class="text-success" *ngIf="joinSuccess">شما با موقیت در گروه عضو شدید.</div>
+                        <div class="text-danger" *ngIf="joinError">خطایی رخ داده است.</div>
+                        <br>
+                    </div>
                 </div>
-                <div class="mt-5 row">
-                    <input placeholder="آدرس گروه" style="height: 40px;" class="p-3 col-xs-12" [(ngModel)]="groupLink">
+                <div class="mt-5 pt-3 row">
+                    <input placeholder="لینک گروه" style="height: 40px;" class="p-3 col-xs-12" [(ngModel)]="groupLink">
                     <button class="btn btn-success col-xs-12 mt-3" (click)="search()">جستجو</button>
+                </div>
+                <div class="mt-3" dir="rtl">
+                    <div *ngIf="isSearching">لطفا منتظر بمانید ...</div>
+                    <div class="text-danger" *ngIf="searchError">گروه یافت نشد.</div>
                 </div>
             </div>
         </div>
