--- a/koji/src/app/user-page/body/join-group/join-group.component.scss
+++ b/koji/src/app/user-page/body/join-group/join-group.component.scss
@@ -55,7 +55,7 @@
 }
 
 .result-container{
-    width: 50%; height: 50px;
+    width: 50%; height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -64,8 +64,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100%;
     height: 100%;
+    border-radius: 15px;
     border: 1px solid black;
 }
 .join-btn{
