project ready for deploy

--- a/koji/src/app/about-us-page/about-us-page.component.html
+++ b/koji/src/app/about-us-page/about-us-page.component.html
@@ -69,12 +69,12 @@
 
   <div class="row bg-dark text-white p-5" dir="ltr">
     <div class="container text-center">
-      <p><strong>creators: </strong>mehty, alireza, iman</p>
+      <p><strong>creator: </strong>mehty</p>
+      <p><strong>Thanks to alireza and iman</strong></p>
       <p><strong class="h4">connections</strong></p>
-      <p><strong>email: </strong>felan@gmail.com</p>
-      <p><strong>github for backend: </strong><a href="https://www.github.com/khoramism/koji">www.github.com/khoramism/koji</a></p>
+      <p><strong>email: </strong>MahdiGhorbaniMQ@gmail.com</p>
+      <p><strong>github for backend: </strong><a href="https://www.github.com/MahdiGhorbaniMQ/koji-back">www.github.com/MahdiGhorbaniMQ/koji-back</a></p>
       <p><strong>github for frontend: </strong><a href="https://www.github.com/MahdiGhorbaniMQ/koji-front">www.github.com/MahdiGhorbaniMQ/koji-front</a></p>
-      <p><strong>linkedIn: </strong>www.linkedin.com/in/felan</p>
     </div>
   </div>
 </div>
